Bring online repo up-to-date

--- a/index.html
+++ b/index.html
@@ -22,11 +22,17 @@
         <div class="full-page">
             <div class="craig-image-div">
                 <img class="craig-image" src="images/craig-photo.jpg" alt="">
+                <div class="get-in-touch-desktop">
+                    <p>Get in Touch</p>
+                </div>
+                <div class="view-cv-button-desktop">
+                    <p>View My CV</p>
+                </div>
             </div>
             <div class="header-section">
                 <div class="header-content">
                     <header class="header">
-                        <p class="history"><strong><span class="off-white">Athlete</span> > <span class="off-white">Advertising</span> > Web Developer</strong></p>
+                        <p class="history"><strong><span class="off-white">Marketing</span> > <span class="off-white">Advertising</span> > Web Developer</strong></p>
                         <h1>Hi, I'm Craig McGowan</h1>
                         <h3>Nice to meet you :)</h3>
                     </header>
@@ -35,7 +41,7 @@
                     </section>
                 </div>
             </div>
-            <div class="get-in-touch">
+            <div class="get-in-touch-mobile">
                 <p>Get in Touch</p>
             </div>
             <section class="projects">
@@ -97,7 +103,7 @@
                     <li class="list-header"><strong>UCLA - Bachelor of Arts, Sociology</strong></li>
                 </ul>
             </section>
-            <div class="view-cv-button">
+            <div class="view-cv-button-mobile">
                 <p>View My Whole CV</p>
             </div>
         </div>
